tackle more docs

--- a/src/pages/docs/height.mdx
+++ b/src/pages/docs/height.mdx
@@ -49,20 +49,25 @@ Use `h-{number}` or `h-px` to set an element to a fixed height.
             <p class="text-center mt-2 text-sm text-indigo-600">h-8</p>
         </div>
         <div>
-            <div class="h-12 w-12 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
+            <div class="h-12 w-8 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
             <p class="text-center mt-2 text-sm text-indigo-600">h-12</p>
         </div>
         <div>
-            <div class="h-16 w-16 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
+            <div class="h-16 w-8 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
             <p class="text-center mt-2 text-sm text-indigo-600">h-16</p>
+        </div>
+        <div>
+            <div class="h-24 w-8 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
+            <p class="text-center mt-2 text-sm text-indigo-600">h-24</p>
         </div>
     </div>
 </template>
 
 <div>
-    <div class="**h-8** w-8 ..."></div>
-    <div class="**h-12** w-12 ..."></div>
-    <div class="**h-16** w-16 ..."></div>
+    <div class="**h-8** ..."></div>
+    <div class="**h-12** ..."></div>
+    <div class="**h-16** ..."></div>
+    <div class="**h-24** ..."></div>
 </div>
 ```
 
