Update dark mode docs

--- a/src/pages/docs/dark-mode.mdx
+++ b/src/pages/docs/dark-mode.mdx
@@ -10,42 +10,11 @@ Now that dark mode is a first-class feature of many operating systems, it's beco
 To make this as easy as possible, Tailwind includes a `dark` variant that lets you style your site differently when dark mode is enabled:
 
 ```html
-<template preview class="p-0">
-  <div class="py-18 px-6 bg-gradient-to-r from-light-blue-100 to-light-blue-200 dark:from-gray-700 dark:to-gray-700">
-    <div class="max-w-sm w-full mx-auto rounded-xl shadow-md overflow-hidden bg-white dark:bg-gray-800">
-      <div class="p-6 flex items-center space-x-4">
-        <div class="h-12 w-12 bg-blue-500 rounded-xl flex items-center justify-center">
-          <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-          </svg>
-        </div>
-        <div>
-          <p class="text-sm font-medium text-gray-500 dark:text-gray-300">Total Subscribers</p>
-          <p class="text-2xl font-medium text-gray-900 dark:text-white">52,407</p>
-        </div>
-      </div>
-      <div class="px-6 py-3 bg-gray-50 dark:bg-gray-900">
-        <a href="#" class="text-sm font-semibold text-blue-700 dark:text-blue-200">View all</a>
-      </div>
-    </div>
-  </div>
-</template>
-
-<div class="max-w-sm w-full mx-auto rounded-xl shadow-md overflow-hidden bg-white **dark:bg-gray-800**">
-  <div class="p-6 flex items-center space-x-4">
-    <div class="h-12 w-12 bg-blue-500 rounded-xl flex items-center justify-center">
-      <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-      </svg>
-    </div>
-    <div>
-      <p class="text-sm font-medium text-gray-500 **dark:text-gray-300**">Total Subscribers</p>
-      <p class="text-2xl font-medium text-gray-900 **dark:text-white**">52,407</p>
-    </div>
-  </div>
-  <div class="px-6 py-3 bg-gray-50 **dark:bg-gray-900**">
-    <a href="#" class="text-sm font-semibold text-blue-700 **dark:text-blue-200**">View all</a>
-  </div>
+<div class="bg-white **dark:bg-gray-800**">
+  <h1 class="text-gray-900 dark:text-white">Dark mode is here!</h1>
+  <p class="text-gray-600 dark:text-gray-300">
+    Lorem ipsum...
+  </p>
 </div>
 ```
 
@@ -61,7 +30,7 @@ module.exports = {
 }
 ```
 
-Now whenever dark mode is enabled on the user's operating system, `dark:{class}` classes will take precedence over unprefixed classes. The `media` strategy uses the `prefers-color-scheme` media feature under the hood, but if you'd like to support toggling dark mode manually, you can also [use the 'class' strategy](#) for more control.
+Now whenever dark mode is enabled on the user's operating system, `dark:{class}` classes will take precedence over unprefixed classes. The `media` strategy uses the `prefers-color-scheme` media feature under the hood, but if you'd like to support toggling dark mode manually, you can also [use the 'class' strategy](#toggling-dark-mode-manually) for more control.
 
 By default, when `darkMode` is enabled `dark` variants are only generated for color-related classes, which includes text color, background color, border color, gradients, and placeholder color.
 
@@ -69,7 +38,7 @@ By default, when `darkMode` is enabled `dark` variants are only generated for co
 
 ## Stacking with other variants
 
-The `dark` variant can be combined with both [responsive](#) variants and [state variants](#) (like hover and focus):
+The `dark` variant can be combined with both [responsive](https://tailwindcss.com/docs/responsive-design) variants and [state variants](https://tailwindcss.com/docs/hover-focus-and-other-states) (like hover and focus):
 
 ```html
 <button class="lg:dark:hover:bg-white ...">
