Add @latest to upgrade instructions

--- a/src/pages/docs/upgrading-to-v2.mdx
+++ b/src/pages/docs/upgrading-to-v2.mdx
@@ -16,7 +16,7 @@ Tailwind CSS v2.0 has been updated for the latest PostCSS release which requires
 Update Tailwind and install PostCSS and autoprefixer using npm:
 
 ```shell
-npm install tailwindcss postcss autoprefixer
+npm install tailwindcss@latest postcss@latest autoprefixer@latest
 ```
 
 If you run into issues, you may need to use our [PostCSS 7 compatibility build](/docs/installation#post-css-7-compatibility-build) instead.
