Fix apply mistake

--- a/src/pages/docs/extracting-components.mdx
+++ b/src/pages/docs/extracting-components.mdx
@@ -165,7 +165,7 @@ Here's what a `btn-indigo` class might look like using `@apply` to compose it fr
   </div>
 </template>
 
-<button class="**bg-indigo**">
+<button class="**btn-indigo**">
   Click me
 </button>
 
