--- a/src/pages/docs/dark-mode.mdx
+++ b/src/pages/docs/dark-mode.mdx
@@ -11,8 +11,8 @@ To make this as easy as possible, Tailwind includes a `dark` variant that lets y
 
 ```html
 <div class="bg-white **dark:bg-gray-800**">
-  <h1 class="text-gray-900 dark:text-white">Dark mode is here!</h1>
-  <p class="text-gray-600 dark:text-gray-300">
+  <h1 class="text-gray-900 **dark:text-white**">Dark mode is here!</h1>
+  <p class="text-gray-600 **dark:text-gray-300**">
     Lorem ipsum...
   </p>
 </div>
