--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Installation
-description: Learn how get Tailwind CSS up and running in your project.
+description: Learn how to get Tailwind CSS up and running in your project.
 ---
 
 import { Heading } from '@/components/Heading'
