--- a/src/pages/docs/theme.mdx
+++ b/src/pages/docs/theme.mdx
@@ -44,7 +44,7 @@ module.exports = {
 }
 ```
 
-We provide a sensible [default theme](https://github.com/tailwindlabs/tailwindcss/blob/v1/stubs/defaultConfig.stub.js#L5) with a very generous set of values to get you started, but don't be afraid to change it or extend; you're encouraged to customize it as much as you need to fit the goals of your design.
+We provide a sensible [default theme](https://github.com/tailwindlabs/tailwindcss/blob/v2.0.0/stubs/defaultConfig.stub.js#L7) with a very generous set of values to get you started, but don't be afraid to change it or extend; you're encouraged to customize it as much as you need to fit the goals of your design.
 
 ---
 
@@ -52,7 +52,7 @@ We provide a sensible [default theme](https://github.com/tailwindlabs/tailwindcs
 
 The `theme` object contains keys for `screens`, `colors`, and `spacing`, as well as a key for each customizable [core plugin](/docs/configuration#core-plugins).
 
-See the [theme configuration reference](#configuration-reference) or the [default theme](https://github.com/tailwindlabs/tailwindcss/blob/v1/stubs/defaultConfig.stub.js#L5) for a complete list of theme options.
+See the [theme configuration reference](#configuration-reference) or the [default theme](https://github.com/tailwindlabs/tailwindcss/blob/v2.0.0/stubs/defaultConfig.stub.js#L7) for a complete list of theme options.
 
 ### Screens
 
