--- a/src/pages/docs/text-color.mdx
+++ b/src/pages/docs/text-color.mdx
@@ -17,12 +17,12 @@ export const classes = {
   plugin,
   preview: (css, { className }) => (
     <td
-      className={`w-16 font-medium text-base whitespace-nowrap align-middle ${className}`}
+      className={`text-center font-medium text-base whitespace-nowrap align-middle ${className}`}
       style={{
         color: Array.isArray(css['color']) ? css['color'][0] : css['color'],
       }}
     >
-      Aa
+      <div className="w-16 mx-auto">Aa</div>
     </td>
   ),
 }
