Remove duplicated disabled attribute

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -446,7 +446,7 @@ Add the `disabled:` prefix to only apply a utility when an element is disabled.
 <button class="**disabled:opacity-50** ...">
   Submit
 </button>
-<button disabled class="**disabled:opacity-50** ..." disabled>
+<button class="**disabled:opacity-50** ..." disabled>
   Submit
 </button>
 ```
