Update compat installation instructions

--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -294,7 +294,7 @@ If you run into the error mentioned above, uninstall Tailwind and re-install usi
 
 ```shell
 npm uninstall tailwindcss postcss autoprefixer
-npm install tailwindcss@compat postcss@^7 autoprefixer@^9
+npm install tailwindcss@npm:@tailwindcss/postcss7-compat postcss@^7 autoprefixer@^9
 ```
 
 The compatibility build is identical to the main build in every way, so you aren't missing out on any features or anything like that.
@@ -302,5 +302,6 @@ The compatibility build is identical to the main build in every way, so you aren
 Once the rest of your tools have added support for PostCSS 8, you can move off of the compatibility build by re-installing Tailwind and its peer-dependencies using the `latest` tag:
 
 ```shell
+npm uninstall tailwindcss @tailwindcss/postcss7-compat
 npm install tailwindcss@latest postcss@latest autoprefixer@latest
 ```
