make darkmode example snippet more correct

--- a/src/pages/docs/dark-mode.mdx
+++ b/src/pages/docs/dark-mode.mdx
@@ -114,8 +114,8 @@ Here's a simple example of how you can support light mode, dark mode, as well as
 // On page load or when changing themes, best to add inline in `head` to avoid FOUC
 if (localStorage.theme === 'dark' || (!'theme' in localStorage && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
   document.querySelector('html').classList.add('dark')
-} else if (localStorage.theme === 'dark') {
-  document.querySelector('html').classList.add('dark')
+} else if (localStorage.theme === 'light') {
+  document.querySelector('html').classList.add('light')
 }
 
 // Whenever the user explicitly chooses light mode
