Add note about Tailwind UI for Tailwind CSS v2 upgrade

--- a/src/pages/docs/upgrading-to-v2.mdx
+++ b/src/pages/docs/upgrading-to-v2.mdx
@@ -7,6 +7,8 @@ Tailwind CSS v2.0 is the first new major version since v1.0 was released in May 
 
 We don't take breaking changes lightly and have worked hard to make sure the upgrade path is as simple as possible. For most projects, upgrading should take less than 30 minutes.
 
+If your project uses the `@tailwindcss/ui` plugin, be sure to read the [Tailwind UI for Tailwind CSS v2.0 upgrade guide](https://tailwindui.com/changes-for-v2) as well.
+
 ----
 
 ## Install Tailwind CSS v2.0 and PostCSS 8
