Update CRA guide

--- a/src/pages/docs/guides/create-react-app.mdx
+++ b/src/pages/docs/guides/create-react-app.mdx
@@ -51,7 +51,7 @@ Then create a `craco.config.js` at the root of our project and add the following
 module.exports = {
   style: {
     postcss: {
-      plugins: [require("tailwindcss/postcss7"), require("autoprefixer")],
+      plugins: [require("tailwindcss"), require("autoprefixer")],
     },
   },
 };
