Fix "Toggling dark mode manually" example (#615)
Fix media query detection if there's no item in localStorage
!'theme' in localStorage is always false

--- a/src/pages/docs/dark-mode.mdx
+++ b/src/pages/docs/dark-mode.mdx
@@ -112,7 +112,7 @@ Here's a simple example of how you can support light mode, dark mode, as well as
 
 ```js
 // On page load or when changing themes, best to add inline in `head` to avoid FOUC
-if (localStorage.theme === 'dark' || (!'theme' in localStorage && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
   document.querySelector('html').classList.add('dark')
 } else {
   document.querySelector('html').classList.remove('dark')
